# SANDataExtractor

./: .gitignore  SANDataExtractor.py  WPlist.txt  ca_nom_archive_2022.txt  fa_nom_archive_2022.txt  ga_nom_archive_2022.txt  main.py  pyproject.toml  result.txt  source.txt  user-config.py  user-password.example.py
.devcontainer/: devcontainer.json
families/: starwars_family.py
src/san_data_extractor/: SANDataExtractor.py  main.py
