[project]
name = "san-data-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Adrians",email = "adrianson@gmail.com"},
    {name = "Josh Freedman",email = "josh@freedman.dev"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pywikibot (>=10.1.0,<11.0.0)",
    "mwparserfromhell (>=0.6.6,<0.7.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "db-to-sqlite (>=1.5,<2.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
